{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 938,
  "lineage": "2cb15338-fd7d-ea45-ee44-e1f26c377a76",
  "resources": [
    {
      "module": "module.alloy_alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alloy-lb-logs-2022-megashby-rnqk",
                "enabled": true,
                "prefix": "alloy-load-balancer"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:388280496866:loadbalancer/app/alloy-alb/919f45fec8f4dade",
            "arn_suffix": "app/alloy-alb/919f45fec8f4dade",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alloy-alb-365179243.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:388280496866:loadbalancer/app/alloy-alb/919f45fec8f4dade",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alloy-alb",
            "security_groups": [
              "sg-0f9b40e009afabf74"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-085b896b0fe5feb41"
              },
              {
                "subnet_id": "subnet-0cb72284ed0e34cb8"
              }
            ],
            "subnets": [
              "subnet-085b896b0fe5feb41",
              "subnet-0cb72284ed0e34cb8"
            ],
            "tags": {
              "Name": "alloy alb"
            },
            "tags_all": {
              "Name": "alloy alb"
            },
            "vpc_id": "vpc-0a9366d02b041c665",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alloy_alb.aws_s3_bucket.lb_logs",
            "module.alloy_alb.random_string.random",
            "module.alloy_networking.aws_security_group.web_sg",
            "module.alloy_networking.aws_subnet.web_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ecs_api_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:388280496866:listener/app/alloy-alb/919f45fec8f4dade/003169e15a739d75",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:388280496866:targetgroup/alloy-alb-target-group/469d15c2fa2f5214",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:388280496866:listener/app/alloy-alb/919f45fec8f4dade/003169e15a739d75",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:388280496866:loadbalancer/app/alloy-alb/919f45fec8f4dade",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_alb.aws_alb.alb",
            "module.alloy_alb.aws_lb_target_group.alb_target_group",
            "module.alloy_alb.aws_s3_bucket.lb_logs",
            "module.alloy_alb.random_string.random",
            "module.alloy_networking.aws_security_group.web_sg",
            "module.alloy_networking.aws_subnet.web_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:388280496866:targetgroup/alloy-alb-target-group/469d15c2fa2f5214",
            "arn_suffix": "targetgroup/alloy-alb-target-group/469d15c2fa2f5214",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-499",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:388280496866:targetgroup/alloy-alb-target-group/469d15c2fa2f5214",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alloy-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "dependencies": [
            "module.alloy_alb.aws_alb.alb",
            "module.alloy_alb.aws_s3_bucket.lb_logs",
            "module.alloy_alb.random_string.random",
            "module.alloy_networking.aws_security_group.web_sg",
            "module.alloy_networking.aws_subnet.web_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebcc1a81a6663481",
            "association_id": "eipassoc-05b4639877d8c1d61",
            "domain": "vpc",
            "id": "eipalloc-0ebcc1a81a6663481",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05828a38a1adb095f",
            "private_dns": "ip-10-0-27-4.ec2.internal",
            "private_ip": "10.0.27.4",
            "public_dns": "ec2-54-156-169-140.compute-1.amazonaws.com",
            "public_ip": "54.156.169.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:internet-gateway/igw-074a54038bb0c7bbe",
            "id": "igw-074a54038bb0c7bbe",
            "owner_id": "388280496866",
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebcc1a81a6663481",
            "connectivity_type": "public",
            "id": "nat-00c8c0493146f924e",
            "network_interface_id": "eni-05828a38a1adb095f",
            "private_ip": "10.0.27.4",
            "public_ip": "54.156.169.140",
            "subnet_id": "subnet-0cb72284ed0e34cb8"
          },
          "dependencies": [
            "module.alloy_networking.aws_eip.nat_gateway_eip",
            "module.alloy_networking.aws_subnet.web_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "app_nat_gw_route_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-074a54038bb0c7bbe",
            "id": "r-rtb-07036f96d6eceb2631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07036f96d6eceb263",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_internet_gateway.public_igw",
            "module.alloy_networking.aws_route_table.app_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "db_nat_gw_route_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09dfc15f00708a7ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00c8c0493146f924e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09dfc15f00708a7ee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_eip.nat_gateway_eip",
            "module.alloy_networking.aws_nat_gateway.nat_gateway",
            "module.alloy_networking.aws_route_table.db_route_table",
            "module.alloy_networking.aws_subnet.web_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "web_igw_route_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-074a54038bb0c7bbe",
            "id": "r-rtb-05175279a5a09fbdc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05175279a5a09fbdc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_internet_gateway.public_igw",
            "module.alloy_networking.aws_route_table.web_route_table",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:route-table/rtb-07036f96d6eceb263",
            "id": "rtb-07036f96d6eceb263",
            "owner_id": "388280496866",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00c8c0493146f924e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alloy app route table"
            },
            "tags_all": {
              "Name": "alloy app route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:route-table/rtb-09dfc15f00708a7ee",
            "id": "rtb-09dfc15f00708a7ee",
            "owner_id": "388280496866",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00c8c0493146f924e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alloy db route table"
            },
            "tags_all": {
              "Name": "alloy db route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:route-table/rtb-05175279a5a09fbdc",
            "id": "rtb-05175279a5a09fbdc",
            "owner_id": "388280496866",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074a54038bb0c7bbe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alloy web route table"
            },
            "tags_all": {
              "Name": "alloy web route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6c0ef5cc7f4c714",
            "route_table_id": "rtb-07036f96d6eceb263",
            "subnet_id": "subnet-006277fefa8f2147c"
          },
          "dependencies": [
            "module.alloy_networking.aws_route_table.app_route_table",
            "module.alloy_networking.aws_subnet.app_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012616eefde90f86f",
            "route_table_id": "rtb-07036f96d6eceb263",
            "subnet_id": "subnet-08eccda35bbd89658"
          },
          "dependencies": [
            "module.alloy_networking.aws_route_table.app_route_table",
            "module.alloy_networking.aws_subnet.app_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc71761316f0d63b",
            "route_table_id": "rtb-09dfc15f00708a7ee",
            "subnet_id": "subnet-0b44dfa7dcbbc1245"
          },
          "dependencies": [
            "module.alloy_networking.aws_route_table.db_route_table",
            "module.alloy_networking.aws_subnet.db_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b9441fdf467f32e",
            "route_table_id": "rtb-09dfc15f00708a7ee",
            "subnet_id": "subnet-03cd8e79a269009a9"
          },
          "dependencies": [
            "module.alloy_networking.aws_route_table.db_route_table",
            "module.alloy_networking.aws_subnet.db_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04722d154479bb329",
            "route_table_id": "rtb-05175279a5a09fbdc",
            "subnet_id": "subnet-0cb72284ed0e34cb8"
          },
          "dependencies": [
            "module.alloy_networking.aws_route_table.web_route_table",
            "module.alloy_networking.aws_subnet.web_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013e2b1986ae97765",
            "route_table_id": "rtb-05175279a5a09fbdc",
            "subnet_id": "subnet-085b896b0fe5feb41"
          },
          "dependencies": [
            "module.alloy_networking.aws_route_table.web_route_table",
            "module.alloy_networking.aws_subnet.web_subnet",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:security-group/sg-096aa13391a6ae284",
            "description": "app sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096aa13391a6ae284",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9b40e009afabf74"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9b40e009afabf74"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_sg",
            "name_prefix": "",
            "owner_id": "388280496866",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:security-group/sg-0f8a296d9f5f45925",
            "description": "db sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8a296d9f5f45925",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096aa13391a6ae284"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "388280496866",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:security-group/sg-0f9b40e009afabf74",
            "description": "web sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9b40e009afabf74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "388280496866",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_sg_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1647130128",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-096aa13391a6ae284",
            "self": false,
            "source_security_group_id": "sg-0f9b40e009afabf74",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.app_sg",
            "module.alloy_networking.aws_security_group.web_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_sg_ingress_http_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-67909321",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-096aa13391a6ae284",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.app_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_sg_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3307606825",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-096aa13391a6ae284",
            "self": false,
            "source_security_group_id": "sg-0f9b40e009afabf74",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.app_sg",
            "module.alloy_networking.aws_security_group.web_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_sg_ingress_https_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1939971936",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-096aa13391a6ae284",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.app_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_sg_ingress_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1430708015",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-096aa13391a6ae284",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.app_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_sg_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4220772531",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-096aa13391a6ae284",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.app_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_sg_in_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3046587454",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f8a296d9f5f45925",
            "self": false,
            "source_security_group_id": "sg-096aa13391a6ae284",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.app_sg",
            "module.alloy_networking.aws_security_group.db_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_sg_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3729227478",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f8a296d9f5f45925",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.db_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_sg_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3972616108",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f9b40e009afabf74",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.web_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_sg_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1123164639",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f9b40e009afabf74",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.web_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_sg_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1523098987",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f9b40e009afabf74",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alloy_networking.aws_security_group.web_sg",
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:subnet/subnet-006277fefa8f2147c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-006277fefa8f2147c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388280496866",
            "tags": {
              "Name": "alloy app subnet"
            },
            "tags_all": {
              "Name": "alloy app subnet"
            },
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:subnet/subnet-08eccda35bbd89658",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-08eccda35bbd89658",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388280496866",
            "tags": {
              "Name": "alloy app subnet"
            },
            "tags_all": {
              "Name": "alloy app subnet"
            },
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:subnet/subnet-0b44dfa7dcbbc1245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.80.0/20",
            "id": "subnet-0b44dfa7dcbbc1245",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388280496866",
            "tags": {
              "Name": "alloy db subnet"
            },
            "tags_all": {
              "Name": "alloy db subnet"
            },
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:subnet/subnet-03cd8e79a269009a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/20",
            "id": "subnet-03cd8e79a269009a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388280496866",
            "tags": {
              "Name": "alloy db subnet"
            },
            "tags_all": {
              "Name": "alloy db subnet"
            },
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:subnet/subnet-0cb72284ed0e34cb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0cb72284ed0e34cb8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388280496866",
            "tags": {
              "Name": "alloy web subnet"
            },
            "tags_all": {
              "Name": "alloy web subnet"
            },
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:subnet/subnet-085b896b0fe5feb41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-085b896b0fe5feb41",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388280496866",
            "tags": {
              "Name": "alloy web subnet"
            },
            "tags_all": {
              "Name": "alloy web subnet"
            },
            "vpc_id": "vpc-0a9366d02b041c665"
          },
          "dependencies": [
            "module.alloy_networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alloy_networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388280496866:vpc/vpc-0a9366d02b041c665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e611c24ca615a1e",
            "default_route_table_id": "rtb-0173862a8e1e2cabc",
            "default_security_group_id": "sg-01d0898717015dd59",
            "dhcp_options_id": "dopt-cdb6ddb4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a9366d02b041c665",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0173862a8e1e2cabc",
            "owner_id": "388280496866",
            "tags": {
              "Name": "alloy vpc"
            },
            "tags_all": {
              "Name": "alloy vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}